login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
  labels:
    app: login-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
      - name: login-service
        image: sharmila231/login-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
