ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /login(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80
          - path: /payment(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /checkout(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: checkout-service
                port:
                  number: 80
